--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2863,6 +2863,11 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     height: auto!important;
     margin-bottom: 50px;
 }
+.page-search #mainContentWrapper{
+  width: 940px!important;
+  max-width: 940px!important; 
+  min-width: 940px!important; 
+}
 /***/
 #weeksPortion {
     left: 256px;
