fixed the form in search page

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2643,7 +2643,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 #edit-field-portion-tid-wrapper{
   margin-right: 10px;
 }
-#edit-field-secondary-topic-tid{
+.page-search #edit-field-secondary-topic-tid{
   width: 500px;
 }
 #views-exposed-form-search-page #edit-title-wrapper .views-widget {
@@ -2657,7 +2657,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     margin-left: 20px;
     margin-top: 5px;
 }
-#edit-field-portion-tid{
+.page-search #edit-field-portion-tid{
   width: 300px;
 }
 #edit-title-wrapper{
