--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1930,7 +1930,7 @@ h3 {
     text-align: left;
     text-transform: capitalize;
 }
-#edit-field-author-tid{
+.page-search #edit-field-author-tid{
   width: 300px;
 }
 #edit-field-secondary-topic-tid-wrapper{
