--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2877,3 +2877,20 @@ ul.quicktabs-tabs.quicktabs-style-zen {
       color: #127795;
     }
 }
+
+/***style for popup when user is not log in***/
+#popupNotLogin {
+    background: none repeat scroll 0 0 #9C1F19;
+    color: #FFFFFF;
+    padding: 15px 0;
+    text-align: center;
+}
+#popupNotLogin > a {
+    color: #FFFFFF;
+    text-decoration: underline;
+}
+#popupNotLogin > span {
+    float: right;
+    margin-right: 20px;
+    cursor: pointer;
+}
