--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -167,7 +167,7 @@ ul li {
     ul li {
         display: inline-block;
     float: none;
-    margin: 0 4px;
+    //margin: 0 4px;
     border-top: 0 none;
     border: none;
     background: none;
@@ -176,10 +176,10 @@ ul li {
       }
 
      & a{
-        padding: 0 5px;
-        color: $colorBrown;
-        font-size: 15px;
-        text-transform: uppercase;
+        // padding: 0 5px;
+        // color: $colorBrown;
+        // font-size: 15px;
+        // text-transform: uppercase;
         @media screen and (max-width: 1340px) {
            font-size: 12px;
            padding: 0;
@@ -253,6 +253,202 @@ ul li {
 .not-logged-in #headerSearch{
   margin-top: 11px;
 }
+/*========================new menu=======================================*/
+
+#newTopHeaderWrapper {
+    background: none repeat scroll 0 0 #433A3A;
+    clear: both;
+    float: left;
+    width: 100%;
+}
+#logoKabblah {
+    float: left;
+    margin: 20px;
+}
+#siteName {
+    color: #999999;
+    float: left;
+    font-family: proxiregular;
+    font-size: 16px;
+    margin-top: 28px;
+}
+#menuLocalWrapper {
+    background: none repeat scroll 0 0 #564E4E;
+    border-bottom: 2px solid #3ba2c1; //change code color for each sites
+    clear: both;
+    float: left;
+    height: 40px;
+    margin-bottom: 5px;
+    width: 100%;
+}
+#headerSearch {
+    float: right;
+    font-size: 13px;
+    margin-top: 15px;
+    text-align: right;
+    text-transform: capitalize;
+}
+
+#search {
+    float: left;
+}
+#usersessionsession {
+    float: left;
+    margin-right: 20px;
+}
+.localSite {
+    color: #999999;
+    font-family: georgia;
+    font-size: 20px;
+    font-style: italic;
+    margin-bottom: 10px;
+    text-align: right;
+}
+.usersessionsession{
+  text-align: center;
+  color: #fff;
+  font-size: 16px;
+}
+.usersessionsession a.activeLink {
+    font-weight: bold;
+    border-bottom: 3px solid #3BA2C1;
+}
+.usersessionsession a {
+    color: #fff;
+}
+.divider {
+    margin: 0 22px;
+}
+#donationWrapper {
+    float: right;
+}
+#desktopMenu,#mobileMenu {
+    float: left;
+}
+.donate {
+    display: inline-block;
+    padding: 7px 33px;
+}
+.donate a{
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+}
+.languageLink > a {
+    color: #FFFFFF;
+    font-size: 12px;
+    margin-right: 20px;
+}
+.languageLink {
+    float: left;
+    margin-top: 10px;
+}
+#nice-menu-1 {
+    margin-top: 11px;
+}
+#nice-menu-1 li {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border: medium none;
+}
+#nice-menu-1 li a {
+    color: #FFFFFF;
+    font-size: 16px;
+    margin: 0 10px;
+    text-transform: uppercase;
+}
+#nice-menu-1 li .active {
+    border-bottom: 6px solid #3ba2c1; //change code color for each sites
+    color: #fff!important;
+    height: 24px;
+}
+ul.nice-menu a{
+  padding:0!important;
+}
+#searchFloating {
+    float: left;
+    margin-left: 10px;
+    margin-top: 10px;
+    display: none;
+}
+.scrolling #searchFloating{
+  display: block;
+}
+#sidr-0 {
+    background: none repeat scroll 0 0 #564e4e;
+    box-shadow: none;
+}
+#sidr-0 ul{
+  border: none;
+}
+#sidr-0 ul li{
+  border:none;
+}
+#sidr-0 ul li:hover > a{
+  box-shadow: none;
+}
+#sidr-0 ul li:hover{
+  line-height: 48px;
+}
+.sidr-class-menu li a {
+    font-family: proxiregular;
+    font-size: 16px;
+}
+#naviConWrapper .icon-text {
+    color: #fff;
+    display: inline-block;
+    font-family: proxiregular;
+    font-size: 10px;
+    margin-bottom: 1px;
+    text-transform: lowercase;
+}
+ul.nice-menu li.menuparent.over > a{
+  background:url(../images/dd_arrow_new.png) no-repeat center bottom!important;
+  height: 30px;
+}
+ul.nice-menu li.menuparent.active-trail.over > a{
+    height: 30px!important;
+}
+ul.nice-menu li.menuparent ul {
+    border: medium none;
+    background: #433a3a;
+    padding: 20px 0;
+    left:-20px;    
+}
+ul.nice-menu, ul.nice-menu ul{
+  z-index: 130px!important;
+}
+ul.nice-menu li.menuparent ul li{
+  line-height: 31px;
+  padding: 0 20px;
+}
+ul.sidr-class-menu li.sidr-class-collapsed > a:before{
+    color: #8E8B8B;
+    content: "+ ";
+    font-size: 24px;
+    font-weight: bold;
+    vertical-align: top;
+}
+ul.sidr-class-menu li.sidr-class-expanded > a:before{
+    color: #fff;
+    content: "- ";
+    font-size: 24px;
+    font-weight: bold;
+    vertical-align: top;
+}
+.sidr ul li ul li,.sidr ul li,.sidr-0 ul li:hover{
+  line-height: 33px!important;
+}
+.sidr ul li ul li a{
+  color: #e9e9e9;
+}
+#sidr-0 ul li a:hover,
+ul#nice-menu-1 ul li:hover{
+  background:#3ba2c1;
+}
+#frontLeft{
+  z-index: 1!important;
+}
+/*===========================end new menu===============================*/
 /*================== END LOCAL MENU ============================= */
 
 /* ================= END HEADER ================================= */
