--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2964,24 +2964,21 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 
 /*** added menu logo style**/
 
-  .icon-bar {
-   background-color: #433A3A;
-    border-radius: 2px;
-    display: block;
-    height: 5px;
-    width: 40px;
+.icon-bar {
+    background-color: #fff;
     box-sizing: border-box;
+    display: block;
+    height: 3px;
+    width: 25px;
 }
 .icon-bar + .icon-bar {
-    margin-top: 5px;
+    margin-top: 4px;
 }
 .navbar-toggle {
-    background: none;
-    border: none;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border: medium none;
     cursor: pointer;
     float: right;
-    margin-bottom: 8px;
-    padding: 7px 4px;
 }
 .navbar-toggle:focus,
 .navbar-toggle:hover{
@@ -2994,12 +2991,6 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 #navLogoWrapper {
   float: left;
     margin-right: 10px;
-}
-#navLogoWrapper h1{
-  font-size: 20px;
-    margin: 0;
-    padding: 0;
-    color: #9C1F19;
 }
 /**** added style for the search page***/
 .page-search #pageregion {
