--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -345,6 +345,7 @@ ul li {
 }
 #nice-menu-1 {
     margin-top: 11px;
+    z-index: 1000;
 }
 #nice-menu-1 li {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
