added search style

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3085,3 +3085,10 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 .tabs-wrapper{
   clear: both; 
 }
+
+
+/**temporary serach***/
+#search img {
+    margin-right: 30px;
+    margin-top: 10px;
+}
