added images search-icon_new.png

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3088,7 +3088,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 
 
 /**temporary serach***/
-#search img {
+#search {
     margin-right: 30px;
     margin-top: 10px;
 }
