--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3148,3 +3148,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 .liveEventsLocationDetail {
     margin-top: 3px;
 }
+#newWelcome {
+    margin: auto;
+    width: 940px;
+}
