--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3152,3 +3152,10 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     margin: auto;
     width: 940px;
 }
+.page-node-5792 h1#page-title{
+  width: 700px;
+}
+.newWelcom{
+  margin: auto;
+width: 700px;
+}
