--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3159,3 +3159,9 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   margin: auto;
 width: 700px;
 }
+#welBtn{
+  width: 721px;
+}
+#welBtn tbody {
+    border: medium none;
+}
