--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3162,6 +3162,9 @@ width: 700px;
 #welBtn{
   width: 721px;
 }
-#welBtn tbody {
+#welBtn tbody,
+#welBtn1 tbody,
+#welBtn3 tbody,
+#welBtn2 tbody {
     border: medium none;
 }
