--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3153,11 +3153,15 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     width: 940px;
 }
 .page-node-5792 h1#page-title{
-  width: 700px;
+  font-size: 40px;
+    line-height: 38px;
+    width: 700px;
 }
-.newWelcom{
-  margin: auto;
-width: 700px;
+.newWelcom {
+    font-size: 20px;
+    line-height: 28px;
+    margin: auto auto 35px;
+    width: 700px;
 }
 #welBtn{
   width: 721px;
