--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3163,6 +3163,11 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     margin: auto auto 35px;
     width: 700px;
 }
+.newWelcom1 {
+    font-size: 16px;
+    line-height: 24px;
+   
+}
 #welBtn{
   width: 721px;
 }
@@ -3171,4 +3176,12 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 #welBtn3 tbody,
 #welBtn2 tbody {
     border: medium none;
+}
+
+.newWelcom2 {
+    font-family: georgia;
+    font-size: 18px;
+    font-style: italic;
+    line-height: 24px;
+    margin-bottom: 70px;
 }
