--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3153,8 +3153,10 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     width: 940px;
 }
 .page-node-5792 h1#page-title{
-  font-size: 40px;
+    font-size: 40px;
     line-height: 38px;
+    padding-bottom: 8px;
+    padding-top: 40px;
     width: 700px;
 }
 .newWelcom {
