added space between the navigation an the title

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3202,3 +3202,8 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     margin-right: auto;
     width: 700px;
 }
+.page-lessons-matot #page-title,
+.page-taxonomy-term-5206 #page-title{
+  display: inline-block;
+  padding-left: 13px;
+}
