--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3217,3 +3217,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 #nice-menu-1 li ul li a {
     text-transform: capitalize;
 }
+ul.nice-menu li.menuparent ul li {
+    line-height: 18px;
+    padding: 5px 20px;
+}
