added space between the main menu and the content

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3221,3 +3221,7 @@ ul.nice-menu li.menuparent ul li {
     line-height: 18px;
     padding: 5px 20px;
 }
+
+.not-front main {
+    padding-top: 45px;
+}
