removed sub menu highlight

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3225,3 +3225,7 @@ ul.nice-menu li.menuparent ul li {
 .not-front main {
     padding-top: 45px;
 }
+#nice-menu-1 li ul li .active{
+    border-bottom: medium none;
+    height: auto;
+}
