--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -361,7 +361,7 @@ ul li {
     margin: 0 10px;
     text-transform: uppercase;
 }
-#nice-menu-1 li .active,#nice-menu-1 li.active-trail {
+#nice-menu-1 li .active,#nice-menu-1 li.active-trail a {
     border-bottom: 6px solid #3ba2c1; //change code color for each sites
     color: #fff!important;
     height: 24px;
@@ -3225,7 +3225,8 @@ ul.nice-menu li.menuparent ul li {
 .not-front main {
     padding-top: 45px;
 }
-#nice-menu-1 li ul li .active{
+#nice-menu-1 li ul li .active,
+#nice-menu-1 li.active-trail a ul li{
     border-bottom: medium none;
     height: auto;
 }
