added text bloc for test live stream

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3244,3 +3244,8 @@ ul.nice-menu li.menuparent ul li {
     cursor: default;
     pointer-events: none;
 }
+.testLiveStream {
+    background: none repeat scroll 0 0 #9c1f19;
+    color: #fff;
+    padding: 20px;
+}
