--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2663,6 +2663,9 @@ div.jp-audio{
   color: $colorBrown;
   }
 }
+#courseDescription .bookmark{
+    margin-top: -59px;
+}
 .flag-message{
   left: -169px!important;
   text-align: right;
